4371: Javadoc CompactionJobStatus